[package]
name = "minecraft_art"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"

[profile.release]
lto = true
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1
incremental = false
strip = true